ci: 修正 workflow 中 PR 的 tag

--- a/.github/workflows/deployImage.yml
+++ b/.github/workflows/deployImage.yml
@@ -37,7 +37,7 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=tag
-            type=sha
+            type=ref,event=pull_request
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
