--- a/.github/workflows/deployImage.yml
+++ b/.github/workflows/deployImage.yml
@@ -37,7 +37,7 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=tag
-            type=ref,event=pull_request
+            type=ref,event=pr
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
